kajit/tests/snapshots/corpus__generated_postreg_disasm_postcard_tuple_nested_aarch64.snap
---
source: kajit/tests/corpus.rs
expression: disasm
---
> sub sp, sp, #0x60
  stp x29, x30, [sp]
  stp x19, x20, [sp, #0x10]
  stp x21, x22, [sp, #0x20]
  stp x23, x24, [sp, #0x30]
  stp x25, x26, [sp, #0x40]
  mov x29, sp
  mov x21, x0
  mov x22, x1
  ldr x19, [x22]
  ldr x20, [x22, #0x8]
  str x19, [x22]
  mov x0, x21
  mov x1, x22
  bl $+0x1f4
  ldr x19, [x22]
  ldr w9, [x22, #0x10]
  cbnz w9, $+0x1cc
  mov x9, #<imm>
  mov x14, x9
  mov x9, #<imm>
  mov x23, x9
  mov x9, #<imm>
  mov x15, x9
  mov x9, #<imm>
  mov x13, x9
  mov x9, #<imm>
  mov x12, x9
  mov x9, #<imm>
  mov x11, x9
  cmp x19, x20
  b.hs $+0x8
  b $+0x10
  mov w9, #0x1
  str w9, [x22, #0x10]
  b $+0x184
  cmp x19, x20
  b.hs $+0x8
  b $+0x10
  mov w9, #0x1
  str w9, [x22, #0x10]
  b $+0x16c
  ldrb w9, [x19]
  mov x24, x9
  add x19, x19, #0x1
  and x14, x14, x24
  and x23, x23, x24
  cmp x23, x15
  b.ne $+0x20
  mov x9, #<imm>
  mov x23, x9
  mov x9, #<imm>
  mov x23, x9
  mov x15, x23
  mov x15, x23
  b $+0xd4
  mov x9, #<imm>
  mov x15, x9
  mov x9, #<imm>
  mov x23, x9
  mov x9, #<imm>
  mov x24, x9
  cmp x19, x20
  b.hs $+0x8
  b $+0x10
  mov w9, #0x1
  str w9, [x22, #0x10]
  b $+0x104
  mov x9, #<imm>
  mov x25, x9
  mov x9, #<imm>
  mov x24, x9
  mov x9, #<imm>
  mov x2, x9
  mov x9, #<imm>
  mov x0, x9
  mov x9, #<imm>
  mov x26, x9
  mov x9, #<imm>
  mov x1, x9
  cmp x19, x20
  b.hs $+0x8
  b $+0x10
  mov w9, #0x1
  str w9, [x22, #0x10]
  b $+0xbc
  ldrb w9, [x19]
  mov x3, x9
  add x19, x19, #0x1
  add x24, x24, x15
  sub x23, x23, x2
  and x25, x25, x3
  and x0, x0, x3
  cmp x23, x1
  cset x1, ne
  mov x9, x25
  mov x10, x15
  lsl x9, x9, x10
  mov x15, x9
  cmp x0, x26
  cset x26, ne
  orr x14, x14, x15
  mov x15, x24
  mov x24, x25
  mov x24, x26
  cbz x26, $+0x8
  cbnz x1, $-0xb0
  mov x15, x24
  cmp x15, x13
  mov x23, x14
  lsr x23, x23, x12
  b.ne $+0x8
  b $+0x10
  mov w9, #0x2
  str w9, [x22, #0x10]
  b $+0x44
  cmp x23, x11
  b.ne $+0x8
  b $+0x10
  mov w9, #0xc
  str w9, [x22, #0x10]
  b $+0x2c
  mov x9, x14
  str w9, [x21, #0x8]
  str x19, [x22]
  ldp x25, x26, [sp, #0x40]
  ldp x23, x24, [sp, #0x30]
  ldp x21, x22, [sp, #0x20]
  ldp x19, x20, [sp, #0x10]
  ldp x29, x30, [sp]
  add sp, sp, #0x60
  ret
  ldp x25, x26, [sp, #0x40]
  ldp x23, x24, [sp, #0x30]
  ldp x21, x22, [sp, #0x20]
  ldp x19, x20, [sp, #0x10]
  ldp x29, x30, [sp]
  add sp, sp, #0x60
  ret
