kajit/tests/snapshots/corpus__generated_postreg_disasm_postcard_tuple_triple_aarch64.snap
---
source: kajit/tests/corpus.rs
expression: disasm
---
> sub sp, sp, #0x90
  stp x29, x30, [sp]
  stp x19, x20, [sp, #0x10]
  stp x21, x22, [sp, #0x20]
  stp x23, x24, [sp, #0x30]
  stp x25, x26, [sp, #0x40]
  mov x29, sp
  mov x21, x0
  mov x22, x1
  ldr x19, [x22]
  ldr x20, [x22, #0x8]
  cmp x19, x20
  b.hs $+0x8
  b $+0x10
  mov w9, #0x1
  str w9, [x22, #0x10]
  b $+0x58c
  mov x9, #<imm>
  mov x7, x9
  mov x9, #<imm>
  mov x6, x9
  mov x9, #<imm>
  mov x8, x9
  mov x9, #<imm>
  mov x14, x9
  str x14, [sp, #0x50]
  mov x9, #<imm>
  mov x5, x9
  str x5, [sp, #0x58]
  mov x9, #<imm>
  mov x4, x9
  str x4, [sp, #0x60]
  mov x9, #<imm>
  mov x1, x9
  str x1, [sp, #0x68]
  mov x9, #<imm>
  mov x3, x9
  str x3, [sp, #0x70]
  mov x9, #<imm>
  mov x1, x9
  str x1, [sp, #0x78]
  mov x9, #<imm>
  mov x15, x9
  mov x9, #<imm>
  mov x25, x9
  mov x9, #<imm>
  mov x24, x9
  mov x9, #<imm>
  mov x23, x9
  mov x9, #<imm>
  mov x26, x9
  mov x9, #<imm>
  mov x14, x9
  mov x9, #<imm>
  mov x13, x9
  mov x9, #<imm>
  mov x12, x9
  mov x9, #<imm>
  mov x11, x9
  cmp x19, x20
  b.hs $+0x8
  b $+0x10
  mov w9, #0x1
  str w9, [x22, #0x10]
  b $+0x4cc
  ldrb w9, [x19]
  mov x1, x9
  add x19, x19, #0x1
  mov x0, x1
  and x0, x0, x7
  and x1, x1, x6
  cmp x1, x8
  b.ne $+0x28
  mov x9, #<imm>
  mov x1, x9
  mov x9, #<imm>
  mov x1, x9
  mov x6, x0
  mov x0, x1
  mov x0, x1
  ldr x8, [sp, #0x50]
  b $+0xe0
  mov x9, #<imm>
  mov x2, x9
  mov x9, #<imm>
  mov x1, x9
  mov x9, #<imm>
  mov x3, x9
  mov x17, x0
  mov x6, x2
  mov x7, x1
  cmp x19, x20
  b.hs $+0x8
  b $+0x10
  mov w9, #0x1
  str w9, [x22, #0x10]
  b $+0x44c
  mov x9, #<imm>
  mov x0, x9
  mov x9, #<imm>
  mov x8, x9
  mov x9, #<imm>
  mov x4, x9
  mov x9, #<imm>
  mov x1, x9
  mov x9, #<imm>
  mov x2, x9
  mov x9, #<imm>
  mov x3, x9
  cmp x19, x20
  b.hs $+0x8
  b $+0x10
  mov w9, #0x1
  str w9, [x22, #0x10]
  b $+0x404
  ldrb w9, [x19]
  mov x5, x9
  add x19, x19, #0x1
  add x8, x8, x6
  sub x7, x7, x4
  and x0, x0, x5
  mov x4, x5
  and x4, x4, x1
  cmp x7, x3
  cset x1, ne
  mov x3, x0
  lsl x3, x3, x6
  cmp x4, x2
  cset x2, ne
  mov x5, x17
  orr x5, x5, x3
  mov x17, x5
  mov x6, x8
  mov x0, x2
  cbz x2, $+0x8
  cbnz x1, $+0x3cc
  mov x6, x17
  cmp x0, x8
  cset x1, ne
  ldr x5, [sp, #0x58]
  mov x0, x6
  lsr x0, x0, x5
  cbnz x1, $+0x8
  b $+0x10
  mov w9, #0x2
  str w9, [x22, #0x10]
  b $+0x384
  ldr x4, [sp, #0x60]
  cmp x0, x4
  cset x0, ne
  cbnz x0, $+0x8
  b $+0x10
  mov w9, #0xc
  str w9, [x22, #0x10]
  b $+0x364
  mov x9, x6
  str w9, [x21]
  cmp x19, x20
  b.hs $+0x8
  b $+0x10
  mov w9, #0x1
  str w9, [x22, #0x10]
  b $+0x344
  cmp x19, x20
  b.hs $+0x8
  b $+0x10
  mov w9, #0x1
  str w9, [x22, #0x10]
  b $+0x32c
  ldrb w9, [x19]
  mov x0, x9
  add x19, x19, #0x1
  ldr x1, [sp, #0x68]
  mov x2, x0
  and x2, x2, x1
  ldr x3, [sp, #0x70]
  mov x1, x0
  and x1, x1, x3
  ldr x0, [sp, #0x78]
  cmp x1, x0
  cset x0, ne
  cbnz x0, $+0x24
  mov x9, #<imm>
  mov x0, x9
  mov x9, #<imm>
  mov x1, x9
  mov x0, x2
  mov x2, x1
  mov x2, x1
  b $+0xe8
  mov x9, #<imm>
  mov x6, x9
  mov x9, #<imm>
  mov x8, x9
  mov x9, #<imm>
  mov x17, x9
  mov x17, x2
  mov x0, x6
  mov x1, x8
  cmp x19, x20
  b.hs $+0x8
  b $+0x10
  mov w9, #0x1
  str w9, [x22, #0x10]
  b $+0x29c
  mov x9, #<imm>
  mov x3, x9
  mov x9, #<imm>
  mov x2, x9
  mov x9, #<imm>
  mov x7, x9
  mov x9, #<imm>
  mov x5, x9
  mov x9, #<imm>
  mov x4, x9
  mov x9, #<imm>
  mov x6, x9
  cmp x19, x20
  b.hs $+0x8
  b $+0x10
  mov w9, #0x1
  str w9, [x22, #0x10]
  b $+0x254
  ldrb w9, [x19]
  mov x8, x9
  add x19, x19, #0x1
  add x2, x2, x0
  sub x1, x1, x7
  and x3, x3, x8
  mov x7, x8
  and x7, x7, x5
  cmp x1, x6
  cset x5, ne
  mov x9, x3
  mov x10, x0
  lsl x9, x9, x10
  mov x0, x9
  cmp x7, x4
  cset x4, ne
  orr x0, x0, x17
  mov x17, x0
  mov x0, x2
  mov x2, x3
  mov x2, x4
  cbz x4, $+0x8
  cbnz x5, $-0xb8
  mov x0, x17
  cmp x2, x15
  mov x15, x0
  lsr x15, x15, x25
  b.ne $+0x8
  b $+0x10
  mov w9, #0x2
  str w9, [x22, #0x10]
  b $+0x1d4
  cmp x15, x24
  b.ne $+0x8
  b $+0x10
  mov w9, #0xc
  str w9, [x22, #0x10]
  b $+0x1bc
  mov x9, x0
  str w9, [x21, #0x4]
  cmp x19, x20
  b.hs $+0x8
  b $+0x10
  mov w9, #0x1
  str w9, [x22, #0x10]
  b $+0x19c
  cmp x19, x20
  b.hs $+0x8
  b $+0x10
  mov w9, #0x1
  str w9, [x22, #0x10]
  b $+0x184
  ldrb w9, [x19]
  mov x24, x9
  add x19, x19, #0x1
  and x23, x23, x24
  and x24, x24, x26
  cmp x24, x14
  b.ne $+0x24
  mov x9, #<imm>
  mov x14, x9
  mov x9, #<imm>
  mov x15, x9
  mov x14, x23
  mov x23, x15
  mov x23, x15
  b $+0xe0
  mov x9, #<imm>
  mov x15, x9
  mov x9, #<imm>
  mov x24, x9
  mov x9, #<imm>
  mov x14, x9
  mov x14, x23
  mov x23, x24
  cmp x19, x20
  b.hs $+0x8
  b $+0x10
  mov w9, #0x1
  str w9, [x22, #0x10]
  b $+0x110
  mov x9, #<imm>
  mov x25, x9
  mov x9, #<imm>
  mov x24, x9
  mov x9, #<imm>
  mov x1, x9
  mov x9, #<imm>
  mov x0, x9
  mov x9, #<imm>
  mov x26, x9
  mov x9, #<imm>
  mov x2, x9
  cmp x19, x20
  b.hs $+0x8
  b $+0x10
  mov w9, #0x1
  str w9, [x22, #0x10]
  b $+0xc8
  ldrb w9, [x19]
  mov x3, x9
  add x19, x19, #0x1
  add x24, x24, x15
  sub x23, x23, x1
  and x25, x25, x3
  mov x4, x3
  and x4, x4, x0
  cmp x23, x2
  cset x17, ne
  mov x9, x25
  mov x10, x15
  lsl x9, x9, x10
  mov x15, x9
  cmp x4, x26
  cset x26, ne
  orr x14, x14, x15
  mov x15, x24
  mov x24, x25
  mov x24, x26
  cbz x26, $+0x8
  cbnz x17, $-0xb4
  mov x23, x24
  cmp x23, x13
  mov x9, x14
  mov x10, x12
  lsr x9, x9, x10
  mov x12, x9
  b.ne $+0x8
  b $+0x10
  mov w9, #0x2
  str w9, [x22, #0x10]
  b $+0x44
  cmp x12, x11
  b.ne $+0x8
  b $+0x10
  mov w9, #0xc
  str w9, [x22, #0x10]
  b $+0x2c
  mov x9, x14
  str w9, [x21, #0x8]
  str x19, [x22]
  ldp x25, x26, [sp, #0x40]
  ldp x23, x24, [sp, #0x30]
  ldp x21, x22, [sp, #0x20]
  ldp x19, x20, [sp, #0x10]
  ldp x29, x30, [sp]
  add sp, sp, #0x90
  ret
  ldp x25, x26, [sp, #0x40]
  ldp x23, x24, [sp, #0x30]
  ldp x21, x22, [sp, #0x20]
  ldp x19, x20, [sp, #0x10]
  ldp x29, x30, [sp]
  add sp, sp, #0x90
  ret
